--- a/themes/frappe/frappe-maroon.css
+++ b/themes/frappe/frappe-maroon.css
@@ -28,3 +28,9 @@
 --ring: 227.234 70.149% 86.863%; /* text */
 
 --radius: 0.5rem;
+
+--chart-1: 358.812 67.785% 70.784%; /* red */
+--chart-2: 171.549 39.227% 64.510%; /* teal */
+--chart-3: 221.633 74.242% 74.118%; /* blue */
+--chart-4: 39.529 62.044% 73.137%; /* yellow */
+--chart-5: 95.833 43.902% 67.843%; /* green */
