--- a/themes/latte/latte-green.css
+++ b/themes/latte/latte-green.css
@@ -28,3 +28,9 @@
 --ring: 233.793 16.022% 35.490%; /* text */
 
 --radius: 0.5rem;
+
+--chart-1: 347.077 86.667% 44.118%; /* red */
+--chart-2: 183.231 73.864% 34.510%; /* teal */
+--chart-3: 219.907 91.489% 53.922%; /* blue */
+--chart-4: 34.948 76.984% 49.412%; /* yellow */
+--chart-5: 109.231 57.635% 39.804%; /* green */
