--- a/themes/macchiato/macchiato-sapphire.css
+++ b/themes/macchiato/macchiato-sapphire.css
@@ -28,3 +28,9 @@
 --ring: 227.442 68.254% 87.647%; /* text */
 
 --radius: 0.5rem;
+
+--chart-1: 351.176 73.913% 72.941%; /* red */
+--chart-2: 171.081 46.835% 69.020%; /* teal */
+--chart-3: 220.189 82.813% 74.902%; /* blue */
+--chart-4: 40.253 69.912% 77.843%; /* yellow */
+--chart-5: 105.217 48.252% 71.961%; /* green */
