--- a/themes/mocha/mocha-peach.css
+++ b/themes/mocha/mocha-peach.css
@@ -28,3 +28,9 @@
 --ring: 226.154 63.934% 88.039%; /* text */
 
 --radius: 0.5rem;
+
+--chart-1: 343.269 81.250% 74.902%; /* red */
+--chart-2: 170 57.353% 73.333%; /* teal */
+--chart-3: 217.168 91.870% 75.882%; /* blue */
+--chart-4: 41.351 86.047% 83.137%; /* yellow */
+--chart-5: 115.455 54.098% 76.078%; /* green */
