--- a/themes/mocha/mocha-blue.css
+++ b/themes/mocha/mocha-blue.css
@@ -1,32 +1,34 @@
+
+
 --radius: 0.625rem;
---background: 240 21.052631735801697% 14.901961386203766%; /* base */
---foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
---card: 240 21.052631735801697% 14.901961386203766%; /* base */
---card-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
---popover: 240 21.052631735801697% 14.901961386203766%; /* base */
---popover-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
---primary: 217 91.86992049217224% 75.88235139846802%; /* accent - Blue */
---primary-foreground: 240 21.052631735801697% 14.901961386203766%; /* base */
---secondary: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
---secondary-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
---muted: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
---muted-foreground: 227 35.29411852359772% 80.0000011920929%; /* subtext1 */
---accent: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
---accent-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
---destructive: 343 81.25% 74.90196228027344%; /* red */
---border: 234 13.20754736661911% 31.176471710205078%; /* surface1 */
---input: 234 13.20754736661911% 31.176471710205078%; /* surface1 */
---ring: 226 63.93442749977112% 88.03921341896057%; /* text */
---chart-1: 343 81.25% 74.90196228027344%; /* red */
---chart-2: 170 57.35294222831726% 73.33333492279053%; /* teal */
---chart-3: 217 91.86992049217224% 75.88235139846802%; /* blue */
---chart-4: 41 86.04651093482971% 83.13725590705872%; /* yellow */
---chart-5: 115 54.09836173057556% 76.07843279838562%; /* green */
---sidebar: 240 21.311475336551666% 11.96078434586525%; /* mantle */
---sidebar-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
---sidebar-primary: 217 91.86992049217224% 75.88235139846802%; /* accent - Blue */
---sidebar-primary-foreground: 240 21.052631735801697% 14.901961386203766%; /* base */
---sidebar-accent: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
---sidebar-accent-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
---sidebar-border: 234 13.20754736661911% 31.176471710205078%; /* surface1 */
---sidebar-ring: 234 13.20754736661911% 31.176471710205078%; /* surface1 */
+--background: 240 21.05% 14.90%; /* base */
+--foreground: 226 63.93% 88.04%; /* text */
+--card: 240 21.05% 14.90%; /* base */
+--card-foreground: 226 63.93% 88.04%; /* text */
+--popover: 240 21.05% 14.90%; /* base */
+--popover-foreground: 226 63.93% 88.04%; /* text */
+--primary: 217 91.87% 75.88%; /* accent - Blue */
+--primary-foreground: 240 21.05% 14.90%; /* base */
+--secondary: 237 16.24% 22.94%; /* surface0 */
+--secondary-foreground: 226 63.93% 88.04%; /* text */
+--muted: 237 16.24% 22.94%; /* surface0 */
+--muted-foreground: 227 35.29% 80.00%; /* subtext1 */
+--accent: 237 16.24% 22.94%; /* surface0 */
+--accent-foreground: 226 63.93% 88.04%; /* text */
+--destructive: 343 81.25% 74.90%; /* red */
+--border: 234 13.21% 31.18%; /* surface1 */
+--input: 234 13.21% 31.18%; /* surface1 */
+--ring: 226 63.93% 88.04%; /* text */
+--chart-1:   329 0.22% 0.37%; /* red */
+--chart-2:   188 0.19% 0.37%; /* teal */
+--chart-3:   221 0.27% 0.40%; /* blue */
+--chart-4:   30 0.09% 0.42%; /* yellow */
+--chart-5:   139 0.13% 0.38%; /* green */
+--sidebar:   240 0.21% 0.14%; /* mantle */
+--sidebar-foreground: 226 63.93% 88.04%; /* text */
+--sidebar-primary: 217 91.87% 75.88%; /* accent - Blue */
+--sidebar-primary-foreground: 240 21.05% 14.90%; /* base */
+--sidebar-accent: 240 21.05% 14.90%; /* surface0 */
+--sidebar-accent-foreground: 226 63.93% 88.04%; /* text */
+--sidebar-border: 234 13.21% 31.18%; /* surface1 */
+--sidebar-ring: 234 13.21% 31.18%; /* surface1 */
