--- a/themes/latte/latte-blue.css
+++ b/themes/latte/latte-blue.css
@@ -1,32 +1,34 @@
+
+
 --radius: 0.625rem;
---background: 220 23.076923191547394% 94.90196108818054%; /* base */
---foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
---card: 220 23.076923191547394% 94.90196108818054%; /* base */
---card-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
---popover: 220 23.076923191547394% 94.90196108818054%; /* base */
---popover-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
---primary: 220 91.4893627166748% 53.921568393707275%; /* accent - Blue */
---primary-foreground: 220 23.076923191547394% 94.90196108818054%; /* base */
---secondary: 223 15.909090638160706% 82.74509906768799%; /* surface0 */
---secondary-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
---muted: 223 15.909090638160706% 82.74509906768799%; /* surface0 */
---muted-foreground: 233 12.796208262443542% 41.372549533843994%; /* subtext1 */
---accent: 223 15.909090638160706% 82.74509906768799%; /* surface0 */
---accent-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
---destructive: 347 86.66666746139526% 44.11764740943909%; /* red */
---border: 225 13.55932205915451% 76.86274647712708%; /* surface1 */
---input: 225 13.55932205915451% 76.86274647712708%; /* surface1 */
---ring: 234 16.022099554538727% 35.49019694328308%; /* text */
---chart-1: 347 86.66666746139526% 44.11764740943909%; /* red */
---chart-2: 183 73.86363744735718% 34.50980484485626%; /* teal */
---chart-3: 220 91.4893627166748% 53.921568393707275%; /* blue */
---chart-4: 35 76.98412537574768% 49.41176474094391%; /* yellow */
---chart-5: 109 57.63546824455261% 39.803922176361084%; /* green */
---sidebar: 220 21.95121943950653% 91.96078181266785%; /* mantle */
---sidebar-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
---sidebar-primary: 220 91.4893627166748% 53.921568393707275%; /* accent - Blue */
---sidebar-primary-foreground: 220 23.076923191547394% 94.90196108818054%; /* base */
---sidebar-accent: 223 15.909090638160706% 82.74509906768799%; /* surface0 */
---sidebar-accent-foreground: 234 16.022099554538727% 35.49019694328308%; /* text */
---sidebar-border: 225 13.55932205915451% 76.86274647712708%; /* surface1 */
---sidebar-ring: 225 13.55932205915451% 76.86274647712708%; /* surface1 */
+--background: 220 23.08% 94.90%; /* base */
+--foreground: 234 16.02% 35.49%; /* text */
+--card: 220 23.08% 94.90%; /* base */
+--card-foreground: 234 16.02% 35.49%; /* text */
+--popover: 220 23.08% 94.90%; /* base */
+--popover-foreground: 234 16.02% 35.49%; /* text */
+--primary: 220 91.49% 53.92%; /* accent - Blue */
+--primary-foreground: 220 23.08% 94.90%; /* base */
+--secondary: 223 15.91% 82.75%; /* surface0 */
+--secondary-foreground: 234 16.02% 35.49%; /* text */
+--muted: 223 15.91% 82.75%; /* surface0 */
+--muted-foreground: 233 12.80% 41.37%; /* subtext1 */
+--accent: 223 15.91% 82.75%; /* surface0 */
+--accent-foreground: 234 16.02% 35.49%; /* text */
+--destructive: 347 86.67% 44.12%; /* red */
+--border: 225 13.56% 76.86%; /* surface1 */
+--input: 225 13.56% 76.86%; /* surface1 */
+--ring: 234 16.02% 35.49%; /* text */
+--chart-1: 345 57.65% 74.12%; /* red */
+--chart-2: 185 37.25% 70.59%; /* teal */
+--chart-3: 219 81.96% 78.43%; /* blue */
+--chart-4: 35 61.18% 76.86%; /* yellow */
+--chart-5: 113 32.94% 73.33%; /* green */
+--sidebar: 218 25.10% 93.73%; /* mantle */
+--sidebar-foreground: 234 16.02% 35.49%; /* text */
+--sidebar-primary: 220 91.49% 53.92%; /* accent - Blue */
+--sidebar-primary-foreground: 220 23.08% 94.90%; /* base */
+--sidebar-accent: 220 23.08% 94.90%; /* surface0 */
+--sidebar-accent-foreground: 234 16.02% 35.49%; /* text */
+--sidebar-border: 225 13.56% 76.86%; /* surface1 */
+--sidebar-ring: 225 13.56% 76.86%; /* surface1 */
